<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZAZFingerDemo_COM</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="desc">display</string>
    <string name="manufacturer">生产厂商： </string>
	<string name="productModel">设备型号：</string>
	<string name="SWVersion">软件版本：</string>
	<string name="DeviceAddress">设备地址：</string>
	<string name="FingerNum">指纹库大小：</string>
	<string name="SecurLevel">指纹安全级别：</string>		
	<string name="CmosExposeTimer">CMOS曝光时间：</string>	
	<string name="DetectSensitive">指纹灵敏度：</string>	
	<string name="ComBaudRate">串口波特率：</string>	
    <string name="clear_mark">清除程序标志</string>
    <string name="reset_setting">恢复出厂设置</string>
    <string name="reset_device">复位设备</string>
    <string name="compare_text">比对</string>
    <string name="spinnerPrompt">地址列表</string>
    <string name="image_preview">预览图像</string>
    <string name="single_compare">单一比对</string>
    <string name="single_search">搜索</string>
    <string name="continue_search">连续搜索</string>
    <string name="db_clear">清空</string>
    <string name="db_delete">删除</string>
    <string name="database_manage_text">数据库管理</string>
    <string name="finger_input_text">指纹录入</string>
    <string name="image_upload">上传图像</string>
    <string name="input_finger">录入指纹</string>
    <string name="input_finger_continue">连续录入</string>
    <string name="image_manage_text">图像管理</string>
    <string name="origin_image">原始图像</string>
    <string name="huoqu_tuxiang">获取图像</string>
    <string name="lianxu_huoqu_iamge">连续获取图像</string>
    <string name="yulan_tuxiang">预览图像</string>
    <string name="baocun_tuxiang">保存图像</string>
    <string name="muban_caozuo_text">模板操作</string>
    <string name="shengcheng_muban">生成模板</string>
    <string name="bidui_muban">比对模板</string>
    <string name="shangchuan_muban">上传模板</string>
    <string name="xiazai_muban">下载模板</string>
    <string name="anquan_shezhi_text">指纹安全级别设置</string>
    <string name="anquan_shezhi">设置</string>
    <string name="zhiwen_anquan_jibie_text">指纹安全级别 </string>
    <string name="cmos_shezhi_text">CMOS参数设置</string>
    <string name="cmos_shezhi">设置</string>
    <string name="baoguang_shijian_text">曝光时间(hex)</string>
    <string name="baoguang_shijian_default">00f8</string>
    <string name="zhiwen_lingmindu_text">指纹灵敏度</string>
    <string name="zhiwen_lingmindu_default">85</string>
    <string name="jishiben_caozuo_text">记事本操作</string>
    <string name="du_jishiben">读记事本</string>
    <string name="xie_jishiben">写记事本</string>
    <string name="botelv_shezhi_text">串口波特率设置</string>
    <string name="botelv_shezhi">设置</string>
    <string name="botelv_shezhi_default">115200</string>
    <string name="qita_caozuo_text">其他操作</string>
    <string name="shebei_xinxi_text">设备信息</string>
    <string name="zhengshiyong_usb">正在使用USB通信</string>
    <string name="zhengshiyong_serial">正在使用串口通信</string>
    <string name="usb_shuchu_text">图像录入成功</string>
    <string name="dakai_shebei">打开设备</string>
    <string name="guanbi_shebei">关闭设备</string>
    <string name="quxiao_dangqian">取消当前操作</string>
    <string name="tuichu_chengxu">退出程序</string>
    <string name="tezheng_bidui_android">特征比对</string>
    <string name="baobiao_shengcheng_android">报表生成</string>
    <string name="usb_communication_type">USB通信方式</string>
    <string name="com_communication_type">串口通信方式</string>
    <string name="image_type">图像</string>
    <string name="alg_type">算法</string>
</resources>
